# APS

./: README.md
Dados/: .directory  Tabela_coleta.qti~  table_template.qtt
Implementacao/input/: .directory
Implementacao/input/ordenacao/: cem_mil.txt  dez_mil.txt  duzentos_mil.txt  novecentos_mil.txt  oitocentos_mil.txt  quatrocentos_mil.txt  quinhentos_mil.txt  seiscentos_mil.txt  setecentos_mil.txt  trezentos_mil.txt
Implementacao/src/: .directory  CMakeLists.txt  binary_search.cpp  bubble_sort.cpp  bubble_sort_optimized.cpp  gerador.cpp  heap_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp  subvetor_maximo.cpp
Implementacao/src/.deps/: binary_search.Po
Relatorio/: Artigo.aux  Artigo.bbl  Artigo.blg  Artigo.tex  Conclusao.tex  Introducao.tex  Metodologia.tex  Resultados.tex  _region_.tex  referencias.bib
Relatorio/_minted-_region_/: 438DC5EBB49EBA9FF062F5C662024173E92278B7C57ABD87F466108A9E42E13F.pygtex  C5B0AF48997ABB0E258E89645E0D44EC4A46E70AAA0BC0CF395072172795A527.pygtex
Relatorio/auto/: Artigo.el
