cmake_minimum_required (VERSION 3.12.3)
project (Implementacao)
add_executable (binary_search binary_search.cpp)
add_executable (bubble_sort_optimized bubble_sort_optimized.cpp)
add_executable (bubble_sort bubble_sort.cpp)
add_executable (heap_sort heap_sort.cpp)
add_executable (insertion_sort heap_sort.cpp)
add_executable (merge_sort merge_sort.cpp)
add_executable (quick_sort quick_sort.cpp)
add_executable (selection_sort selection_sort.cpp)
add_executable (subvetor_maximo subvetor_maximo.cpp)
add_executable (gerador gerador.cpp)
